tests/bad/duplicate_comment.s
.name "coucou"
.comment "coucou"

live %1
.comment "coucou"
